--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+ <title>Test Site</title>
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
  <div class="w3-container w3-black">
  <center>
@@ -9,4 +12,34 @@
   <h2>Who made this?</h2>
   <p>This site is owned and maintained by <a href="http://www.athelo.net">Aezlo</a> .</p>
   <hr>
+</div>
+<img class="mySlides" src="img/img_fjords.jpg">
+<img class="mySlides" src="img/img_lights.jpg">
+<img class="mySlides" src="img/img_mountains.jpg">
+<img class="mySlides" src="img/img_forest.jpg">
+<button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+ <script>
+  var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+    showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    if (n > x.length) {slideIndex = 1} 
+    if (n < 1) {slideIndex = x.length} ;
+    for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none"; 
+    }
+    x[slideIndex-1].style.display = "block"; 
+}
+</script>
+<div class="w3-container w3-pale-yellow">
+  <h5>Footer</h5>
+ <a class="w3-text-white" href="#"><span class="w3-xlarge">
+    <i class="fa fa-chevron-circle-up"></i></span></a>
 </div>
