--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <title>Test Site</title>
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel="stylesheet" href="/style.css">
 <body>
  <div class="w3-container w3-black">
  <center>
@@ -40,6 +41,11 @@ function showDivs(n) {
 </script>
 <div class="w3-container w3-pale-yellow">
   <h5>Footer</h5>
- <a class="w3-text-white" href="#"><span class="w3-xlarge">
-    <i class="fa fa-chevron-circle-up"></i></span></a>
+ <a class="w3-text-white" href="#">
+  <span class="w3-xlarge">
+    <i class="fa fa-chevron-circle-up"></i>
+  </span>
+ </a>
 </div>
+</body>
+</html>
