--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p>This site is owned and maintained by <a href="http://www.athelo.net">Aezlo</a> .</p>
   <hr>
 </div>
-div class="w3-content w3-display-container">
+<div class="w3-content w3-display-container">
   <img class="mySlides" src="img/img_fjords.jpg" style="width:100%">
   <img class="mySlides" src="img/img_lights.jpg" style="width:100%">
   <img class="mySlides" src="img/img_mountains.jpg" style="width:100%">
