--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <link rel="stylesheet" href="/style.css">
 <body>
+ <div id="Rainbow">
+<div id="red" class="rainbow-color"></div>
+<div id="orange" class="rainbow-color"></div>
+<div id="yellow" class="rainbow-color"></div>
+<div id="green" class="rainbow-color"></div>
+<div id="blue" class="rainbow-color"></div>
+<div id="indigo" class="rainbow-color"></div>
+<div id="violet" class="rainbow-color"></div>
+</div>
  <div class="w3-container w3-black">
  <center>
   <h1>Welcome to Aezlo</h1>
