--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>a
+<html>
  <title>Test Site</title>
  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
