--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>Welcome to Aezlo</h1>
  </center>
 </div>
-<div class="w3-container"> 
+<div class="w3-container w3-pale-red"> 
   <h2>Who made this?</h2>
   <p>This site is owned and maintained by <a href="http://www.athelo.net">Aezlo</a> .</p>
   <hr>
