--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>I'm aezlo.</h1>
+						<p>Links to other accounts.</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+								<li><a href="//twitter.com/axIeIr" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="//github.com/aeth1r/aeth1r.github.io" class="icon fa-code-fork "><span class="label">Fork</span></a></li>
+								<li><a href="//aezto.deviantart.com/" class="icon fa-deviantart"><span class="label">Deviantart</span></a></li>
+								<li><a href="//github.com/axlelr" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="malito:admin@athelo.net" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
@@ -42,7 +42,7 @@
 
 			</div>
 		</div>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<!--[if lte IE 8]><<script src="assets/js/ie/respond.min.js"></script><![endif]-->
 		<script>
 			window.onload = function() { document.body.className = ''; }
 			window.ontouchmove = function() { return false; }
